# tauri-template

./: .biomeignore  .env.example  .gitignore  .release-please.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  biome.json  commitlint.config.js  knip.json  lefthook.yml  lingui.config.ts  mise.toml  package.json  playwright.config.ts  quick-pane.html  sgconfig.yml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: cleanup-analyzer.md  docs-reviewer.md  plan-checker.md  userguide-reviewer.md
.claude/commands/: check.md  cleanup.md  init.md
.github/workflows/: ci.yml  release-please.yml  release.yml
.kilocode/: mcp.json
.opencode/skills/: tailwind-v4
docs/: CONTRIBUTING.md  SECURITY.md  USING_THIS_TEMPLATE.md
docs/developer/: README.md  architecture-guide.md  biome-usage.md  bun-usage.md  bundle-optimization.md  command-system.md  cross-platform.md  data-persistence.md  devtools.md  error-handling.md  external-apis.md  git-hooks.md  i18n-lingui-best-practices.md  i18n-patterns.md  i18n-strategy.md  keyboard-shortcuts.md  logging.md  menus.md  project-gaps.md  quick-panes.md  release-workflow.md  releases.md  routing-guide.md  rust-architecture.md  state-management.md  static-analysis.md  tauri-commands.md  tauri-plugins.md  testing.md  tray-icon.md  ui-patterns.md  writing-ast-grep-rules.md  writing-docs.md
docs/plans/: 2026-02-25-base-ui-migration-design.md  2026-02-25-base-ui-migration-plan.md
docs/userguide/: userguide.md
e2e/: resize-panel.spec.ts  sidebar.spec.ts
scripts/: complete-task.js  migrate-translations.mjs  prepare-release.js
src/: App.css  App.test.tsx  App.tsx  AppProviders.tsx  main.tsx  quick-pane-main.tsx  quick-pane.css  router.tsx  theme-variables.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: bindings.rs  lib.rs  types.rs
src-tauri/src/commands/: mod.rs  notifications.rs  preferences.rs  quick_pane.rs  recovery.rs  tray.rs
src-tauri/src/utils/: logger.rs  mod.rs  platform.rs
src/components/: ErrorBoundary.tsx  ThemeProvider.tsx
src/hooks/: use-command-context.ts  use-keyboard-shortcuts.ts  use-platform.test.ts  use-platform.ts  use-theme.ts  useMainWindowEventListeners.ts
src/i18n/: config.ts  index.ts  language-init.ts
src/lib/: bindings.ts  context-menu.test.ts  context-menu.ts  icons.ts  logger.ts  menu.ts  notifications.ts  (+5 more)
(+115 files in other folders)
